Added missing scripts to run experiments and compute performance metrics

--- a/experiments/training.ipynb
+++ b/experiments/training.ipynb
@@ -44,7 +44,7 @@
     "    sys.path.append(module_path)\n",
     "\n",
     "from training import *\n",
-    "from utils import User, VisualSimilarityHandler, get_decaying_learning_rates"
+    "from utils import User, VisualSimilarityHandler, get_decaying_learning_rates, load_embeddings_and_ids"
    ]
   },
   {
@@ -87,32 +87,6 @@
     "gdown.download(inventory_url, data_path + 'inventory.csv')\n",
     "gdown.download(purchases_url, data_path + 'purchases.csv')\n",
     "gdown.download(clusters_url, data_path + 'clusters.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-05T00:28:03.436868Z",
-     "start_time": "2020-09-05T00:28:03.430441Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def load_embeddings_and_ids(embedding_path):\n",
-    "    featmat = np.load(embedding_path, allow_pickle=True)\n",
-    "    ids = featmat[:, 0]\n",
-    "    featmat = featmat[:, 1]\n",
-    "    newfeatmat = []\n",
-    "    for i in range(featmat.shape[0]):\n",
-    "        newfeatmat.append(featmat[i])\n",
-    "    index2id = {h:i for i, h in enumerate(ids)}\n",
-    "    id2index = {i:h for i, h in enumerate(ids)}\n",
-    "    \n",
-    "    return dict(featmat=np.array(newfeatmat),\n",
-    "                index2id=index2id,\n",
-    "                id2index=id2index)"
    ]
   },
   {
@@ -1187,8 +1161,7 @@
    },
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from Networks import ContentBasedLearn2RankNetwork_Train, TrainLogger"
+    "import tensorflow as tf"
    ]
   },
   {
@@ -1246,7 +1219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_PATH = 'curatornet_10m'"
+    "MODEL_PATH = 'curatornet_10m/'"
    ]
   },
   {
@@ -1276,9 +1249,7 @@
     "    item_layer_units=[200,200],\n",
     "    profile_pooling_mode='AVG+MAX',\n",
     "    model_path = MODEL_PATH,\n",
-    "    epochs=1000,\n",
-    "    max_seconds_training=3600*3,\n",
-    "    min_seconds_to_check_improvement=60*5,\n",
+    "    epochs=10,\n",
     "    early_stopping_checks=2,\n",
     "    weight_decay=.0001,\n",
     "    learning_rates=learning_rates,\n",
@@ -1302,7 +1273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
